--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "multi-filtering",
+  "homepage": "https://gunnar-miklis.github.io/multi-filtering/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "tscw": "tsc --watch",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "build": "prettier --write . && eslint . && tsc -b && vite build",
+    "build": "yarn format && yarn lint && tsc -b && vite build",
     "preview": "vite preview",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
