--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multi-filtering",
-  "homepage": "https://gunnar-miklis.github.io/multi-filtering/",
+  "homepage": "https://gunnar-miklis.github.io/multi-filtering",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -16,13 +16,15 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/gh-pages": "^6.1.0",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.10.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
